  This also affects sha1sum, sha224sum, sha384sum and sha512sum.

  pwd now works also on systems without openat.  On such systems, pwd
  would fail when run from a directory whose absolute name contained
  more than PATH_MAX / 3 components.  Also affected due to their use
  of canonicalize_* functions: df, stat, readlink.


* Noteworthy changes in release 8.13 (2011-09-08) [stable]

** Bug fixes

  chown and chgrp with the -v --from= options, now output the correct owner.
  I.E. for skipped files, the original ownership is output, not the new one.
  [bug introduced in sh-utils-2.0g]

  cp -r could mistakenly change the permissions of an existing destination
  directory.  [bug introduced in coreutils-6.8]

  cp -u -p would fail to preserve one hard link for each up-to-date copy
  of a src-hard-linked name in the destination tree.  I.e., if s/a and s/b
  are hard-linked and dst/s/a is up to date, "cp -up s dst" would copy s/b
  to dst/s/b rather than simply linking dst/s/b to dst/s/a.
  [This bug appears to have been present in "the beginning".]

  fts-using tools (rm, du, chmod, chgrp, chown, chcon) no longer use memory
  proportional to the number of entries in each directory they process.
  Before, rm -rf 4-million-entry-directory would consume about 1GiB of memory.
  Now, it uses less than 30MB, no matter how many entries there are.
  [this bug was inherent in the use of fts: thus, for rm the bug was
  introduced in coreutils-8.0.  The prior implementation of rm did not use
  as much memory.  du, chmod, chgrp and chown started using fts in 6.0.
  chcon was added in coreutils-6.9.91 with fts support.  ]

  pr -T no longer ignores a specified LAST_PAGE to stop at.
  [bug introduced in textutils-1.19q]

  printf '%d' '"' no longer accesses out-of-bounds memory in the diagnostic.
  [bug introduced in sh-utils-1.16]

  split --number l/... no longer creates extraneous files in certain cases.
  [bug introduced in coreutils-8.8]
